--- a/.github/workflows/go_tests.yml
+++ b/.github/workflows/go_tests.yml
@@ -22,18 +22,11 @@ jobs:
       - name: Download dependencies
         run: go mod tidy
 
-      - name: Run tests with verbose output and coverage
-        run: |
-          mkdir -p coverage
-          go test ./... -v -race -coverprofile=coverage/coverage.out -covermode=atomic
-          go tool cover -func=coverage/coverage.out | tee coverage/coverage.txt
-          go tool cover -html=coverage/coverage.out -o coverage/coverage.html
+      - name: Run tests
+        run: go test ./... -v -race -coverprofile=coverage.out
 
-      - name: Upload coverage artifacts
+      - name: Upload coverage
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: coverage/
-
-      - name: Print coverage summary
-        run: cat coverage/coverage.txt
+          path: coverage.out
